--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
   },
   "homepage": "https://github.com/KensukeSakama/HRtranslator#readme",
   "dependencies": {
-    "ajax": "0.0.4",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.1.0",
+    "fast-xml-parser": "^3.18.0",
     "framer-motion": "^3.2.1",
-    "jquery": "^3.5.1",
     "mysql": "^2.18.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-test-renderer": "^17.0.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
