--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/KensukeSakama/HRtranslator#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.1.0",
@@ -29,6 +30,7 @@
     "framer-motion": "^3.2.1",
     "mysql": "^2.18.1",
     "react": "^16.4.0",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "^16.4.0",
     "react-test-renderer": "^17.0.1",
     "styled-components": "^5.2.1",
